ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}

SUBDIRS = pixmaps data src help po

DISTCHECK_CONFIGURE_FLAGS = --disable-scrollkeeper

EXTRA_DIST = \
	gnome-doc-utils.make \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in \
	mkinstalldirs

DISTCLEANFILES = \
	gnome-doc-utils.make \
	intltool-extract \
	intltool-merge \
	intltool-update
