AC_PREREQ(2.52)
AC_INIT(src/ping.c)

dnl Useful to call aclocal after 'make'
AC_SUBST(ACLOCAL_AMFLAGS, "$ACLOCAL_FLAGS")

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gnome-nettool, 2.14.0)
AM_MAINTAINER_MODE

AC_PROG_INTLTOOL([0.11])

AC_ISC_POSIX
AC_PROG_CC
AC_STDC_HEADERS
AC_CHECK_HEADERS(sys/sockio.h sys/socket.h ifaddrs.h)
dnl AC_ARG_PROGRAM
AM_PROG_LIBTOOL

GNOME_COMPILE_WARNINGS(yes)
CFLAGS="$CFLAGS $WARN_CFLAGS"

dnl ******************************************
dnl ** pkg-config dependacy checks          **
dnl ******************************************


GTK_REQUIRED=2.5.4
LIBGLADE_REQUIRED=2.0.0
GCONF_REQUIRED=1.1.11

PKG_CHECK_MODULES(NETTOOL, 
		  gtk+-2.0       >= $GTK_REQUIRED 
		  libglade-2.0   >= $LIBGLADE_REQUIRED 
		  gconf-2.0      >= $GCONF_REQUIRED)
AC_SUBST(NETTOOL_CFLAGS)
AC_SUBST(NETTOOL_LIBS)

dnl
dnl Translations
dnl
GETTEXT_PACKAGE=gnome-nettool
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",[The gettext package])
ALL_LINGUAS="ar az bg bn bs ca cs cy da de dz el en_CA en_GB es et eu fa fi fr ga gl gu he hi hr hu id it ja ka ko lt mk ml mn ms nb ne nl no pa pl pt pt_BR ro ru rw sk sq sr sr@Latn sv ta th tr uk vi wa xh zh_CN zh_TW"
AM_GLIB_GNU_GETTEXT

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

dnl
dnl Debugging flags
dnl
set_debug=no
AC_ARG_ENABLE(debug,
[  --enable-debug       Lots of noisy debug messages],
set_debug="$enableval")

AC_MSG_CHECKING(if debug messages are enabled)
if test "$set_debug" != "no"; then
        AC_MSG_RESULT(yes)
        CFLAGS="-DGRD_DEBUG $CFLAGS"
else
        AC_MSG_RESULT(no)
fi

AC_OUTPUT([
Makefile
po/Makefile.in
pixmaps/Makefile
src/Makefile])
