@YELP_HELP_RULES@

HELP_ID = gnome-nettool

HELP_FILES = \
	index.page \
	introduction.page \
	ip-information.page \
	network-connectivity.page

HELP_MEDIA = \
	figures/gnome-nettool-trail.png \
	figures/gnome-nettool.png

HELP_EXTRA =

HELP_LINGUAS = ca cs da de el en_GB es fr hu ko oc pa pl pt_BR ru sv uk vi zh_CN

-include $(top_srcdir)/git.mk
