gnome = import('gnome')

sources = [
  'index.page',
  'introduction.page',
  'ip-information.page',
  'network-connectivity.page',
]

media = [
  'figures/gnome-nettool-trail.png',
  'figures/gnome-nettool.png',
]

gnome.yelp(
  meson.project_name(),
  sources: sources,
  media: media,
  symlink_media: true,
)
