pixmapsdir = $(datadir)/gnome-nettool/pixmaps
pixmaps_DATA = 			\
	16_ethernet.xpm	 	\
	16_loopback.xpm	 	\
	16_plip.xpm	 	\
	16_ppp.xpm	 	\
	gnome-nettool.png	\
	irda-16.png	 	\
	network.png	 	\
	wavelan-16.png

icondir = $(datadir)/pixmaps
icon_DATA = gnome-nettool.png

EXTRA_DIST = $(pixmaps_DATA)	 \
	     $(icon_DATA)
